fix: fix overflow issue caused by animated components

--- a/app/globals.css
+++ b/app/globals.css
@@ -161,3 +161,7 @@ footer {
     }
   }
 }
+
+section {
+  overflow-x: clip;
+}
